flux/apps/grimmory/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: grimmory
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:2x7TcAABupn1C0geLxYLfy7AgPIpB1fnpb4YYtCm,iv:eBub9+hfS7we0FtKswVHpdOucTqpa3l+ZgeEnkBsztk=,tag:JNcvFlAJwjwRiM3DzWwgOw==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: grimmory
              port: 6060
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRUGRydlVQVWhXcGZiR21n
[...]
            d4ldKu4irNvkJu6H5RNGx9HIM/PW/l8BULrD4eMzwhElQd/w809qwQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-05T19:22:30Z"
    mac: ENC[AES256_GCM,data:p91WvpdsJpi6iIm7gJdd3bnxiNk5SoSc+4Ju7bMk/IlDqNaF5byiQMfWYFC0/NTQw7KPvV0Iyy0dMBu3QsO7cCXJ2okaWkTKJSHndW6j9irYAjfLm5sN11emCNXD23IkFHg7IMLfnqISRgjsFf1wE0d9bk/JFPNfwaQ5PFnOTcM=,iv:LqF/PNaMiMPHfjWUrYkX1FbDxNT4upw5O9rw4tMa3uQ=,tag:ctfHVh+bsIqSw9pXB/rhwg==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
